--- a/2 -Qr genertaor/index.html
+++ b/2 -Qr genertaor/index.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qr code gnerator</title>
-    <link rel="stylesheet" href="Style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Style.css" />
+  </head>
+  <body>
+    <h1 style="text-align: center; color: white; padding-top: 30px">
+      <b><i>Get Your Qr here</i></b>
+    </h1>
     <div class="container">
-        <p> enter your text</p>
-        <input type="text" placeholder="Text or url"  id="qrText">
-        <div id="imgBox">
-                <img src="" alt="" id="qrImage">
-        </div>
-        <button onclick="generateQR()"> generate qr code</button>
+      <p>enter your text</p>
+      <input type="text" placeholder="Text or url" id="qrText" />
+      <div id="imgBox">
+        <img src="" alt="" id="qrImage" />
+      </div>
+      <button onclick="generateQR()">generate qr code</button>
     </div>
-    
-
 
     <script>
+      let imgBox = document.getElementById("imgBox");
+      let qrImage = document.getElementById("qrImage");
+      let qrText = document.getElementById("qrText");
 
-        let imgBox = document.getElementById("imgBox")
-        let qrImage = document.getElementById("qrImage")
-        let qrText = document.getElementById("qrText")
-
-
-        function generateQR(){
-            if(qrText.value.length > 0){
-
-
-            qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
-            imgBox.classList.add("show-img");
-        }else{
-            qrText.classList.add('error');
-            setTimeout(()=>{
-                qrText.classList.remove('error');
-            },1000);
+      function generateQR() {
+        if (qrText.value.length > 0) {
+          qrImage.src =
+            "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" +
+            qrText.value;
+          imgBox.classList.add("show-img");
+        } else {
+          qrText.classList.add("error");
+          setTimeout(() => {
+            qrText.classList.remove("error");
+          }, 1000);
         }
-    }
-
-
-
+      }
     </script>
-</body>
+  </body>
 </html>
